2012-10-10  Brady Eidson  <beidson@apple.com>

        Switch CachedResource over from SharedBuffer to a new ResourceBuffer
        https://bugs.webkit.org/show_bug.cgi?id=98541

        Reviewed by Anders Carlsson.

        As part of preparation for a WebKit2 NetworkProcess, we need to change the data handle shared
        between CachedResources and ResourceLoaders to be one that can be backed by something other
        than a SharedBuffer.

        ResourceBuffer is this new object. Right now it is directly backed by a SharedBuffer and there
        should be no change in behavior.

        No new tests (No behavior change).

        * WebCore.exp.in:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCore.vcproj/WebCore.vcproj:
        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * Target.pri:
        * WebCore.gypi:

        Implementation of the new ResourceBuffer, backed directly by a SharedBuffer:
        * loader/ResourceBuffer.cpp: Added.
        (WebCore):
        (WebCore::ResourceBuffer::ResourceBuffer):
        (WebCore::ResourceBuffer::~ResourceBuffer):
        (WebCore::ResourceBuffer::data):
        (WebCore::ResourceBuffer::size):
        (WebCore::ResourceBuffer::isEmpty):
        (WebCore::ResourceBuffer::getSomeData):
        (WebCore::ResourceBuffer::sharedBuffer):
        (WebCore::ResourceBuffer::copy):
        (WebCore::ResourceBuffer::hasPurgeableBuffer):
        (WebCore::ResourceBuffer::releasePurgeableBuffer):
        (WebCore::ResourceBuffer::createCFData):

        * loader/ResourceBuffer.h: Added.
        (WebCore):
        (ResourceBuffer):
        (WebCore::ResourceBuffer::create):
        (WebCore::ResourceBuffer::adoptSharedBuffer):
        * loader/mac/ResourceBuffer.mm: Added.

        (WebCore):
        (WebCore::ResourceBuffer::createNSData):

        Switch CachedResource over to using it:
        * loader/cache/CachedResource.cpp:
        (WebCore::CachedResource::makePurgeable):
