@@ -1,3 +1,10 @@
+2012-10-10  Tony Chang  <tony@chromium.org>
+
+        Unreviewed, speculative build fix for Qt Win.
+
+        * css/makegrammar.pl: Rather than making a temp file, use a pipe to
+        pass data from gcc to the final output file.
+
 2012-10-10  Brady Eidson  <beidson@apple.com>
 
         Switch CachedResource over from SharedBuffer to a new ResourceBuffer
